refactor: adjusting classes